--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,8 +4,9 @@ title: Projects
 permalink: /projects/
 weight: 1
 remote_projects: 
-  - git-for-wizards
-  - arduino-visitor-counter
+  - latex-cv
+  - fit-distribution
+  - DS540
 ---
 
 {% include projects/index.html %}
