--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,6 +4,7 @@ title: Projects
 permalink: /projects/
 weight: 1
 remote_projects: 
+  - optimal-classification-tree
   - latex-cv
   - fit-distribution
   - DS540
